//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  username String [not null]
  role Role [not null]
  avatarUrl String
  playgroundSettings PlaygroundSettings
  userSettings UserSettings
  favoriteSongs Song [not null]
  notifications Notification [not null]
  Song Song [not null]
}

Table PlaygroundSettings {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User
  userId String
  guitarStyle GuitarStyle [default: 'STRUM']
  guitarOrientation GuitarOrientation [default: 'RIGHT_HANDED']
  guitarType GuitarType [default: 'ACOUSTIC']
  chordWidget Boolean [not null, default: true]
}

Table UserSettings {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User
  userId String
  notificationEnabled Boolean [not null, default: true]
  notificationRecommended Boolean [not null, default: true]
  notificationAdminReview Boolean [not null, default: true]
}

Table Notification {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  message String [not null]
  for User
  userId String
  read Boolean [not null, default: false]
}

Table Song {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  artist String [not null]
  postedBy User [not null]
  postedById String [not null]
  difficulty Difficulty [not null]
  tuning String [not null]
  style GuitarStyle
  tab Tab
  archived Boolean [not null, default: false]
  inReview Boolean [not null, default: true]
  submittedToReview Boolean [not null, default: false]
  favoriteUsers User [not null]
}

Table Tab {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  song Song [not null]
  songId String [not null]
  tempo Int [not null]
  tempoName String [not null]
  tracks Track [not null]
}

Table Track {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  offset Int [not null]
  measures Json [not null]
  tab Tab [not null]
  tabId String [not null]
}

Table favoriteRelation {
  favoritesongsId String [ref: > Song.id]
  favoriteusersId String [ref: > User.id]
}

Enum Role {
  ADMIN
  USER
}

Enum Difficulty {
  EASY
  MEDIUM
  HARD
}

Enum GuitarStyle {
  STRUM
  FINGERPICK
}

Enum GuitarOrientation {
  LEFT_HANDED
  RIGHT_HANDED
}

Enum GuitarType {
  CLASSICAL
  ACOUSTIC
  ELECTRICAL
}

Ref: PlaygroundSettings.userId - User.id

Ref: UserSettings.userId - User.id

Ref: Notification.userId > User.id

Ref: Song.postedById > User.id

Ref: Tab.songId - Song.id

Ref: Track.tabId > Tab.id